# serapeum

./: .gitignore  .pre-commit-config.yaml  HISTORY.rst  README.md  Taskfile.yml  conftest.py  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  versions.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  conda-deployment.yml  github-pages-mkdocs.yml  github-release.yml  pypi-deployment.yml  pypi-release.yml  test-azure-openai.yml  test-core.yml  test-docs.yml  test-llama-cpp.yml  test-ollama.yml  test-openai.yml  test.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/AUTHORS/: index.html
0.1.0/LICENSE/: index.html
0.1.0/change-log/: index.html
0.1.0/developer-guide/SECURITY/: index.html
0.1.0/developer-guide/contributing/: index.html
0.1.0/developer-guide/installation/: index.html
0.1.0/developer-guide/taskfile/: index.html
0.1.0/overview/core-package/: index.html
0.1.0/overview/providers/: index.html
0.1.0/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/AUTHORS/: index.html
0.3.0/LICENSE/: index.html
0.3.0/architecture/diagrams/: index.html
0.3.0/architecture/integration-guide/: index.html
0.3.0/architecture/legend/: index.html
0.3.0/architecture/overview/: system-context.mmd
0.3.0/architecture/sequence-diagrams/: simple-prediction.mmd  structured-output.mmd
0.3.0/change-log/: index.html
0.3.0/developer-guide/SECURITY/: index.html
0.3.0/developer-guide/contributing/: index.html
0.3.0/developer-guide/installation/: index.html
0.3.0/developer-guide/taskfile/: index.html
0.3.0/developer-guide/testing-docs/: index.html
0.3.0/llm-sdk-api-comparison/: index.html
0.3.0/overview/: serapeum.drawio
0.3.0/overview/core-package/: index.html
0.3.0/overview/providers/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/AUTHORS/: index.html
0.5.0/LICENSE/: index.html
0.5.0/architecture/diagrams/: index.html
0.5.0/architecture/integration-guide/: index.html
0.5.0/architecture/legend/: index.html
0.5.0/change-log/: index.html
0.5.0/developer-guide/SECURITY/: index.html
0.5.0/developer-guide/contributing/: index.html
0.5.0/developer-guide/installation/: index.html
0.5.0/developer-guide/taskfile/: index.html
0.5.0/developer-guide/testing-docs/: index.html
0.5.0/llm-sdk-api-comparison/: index.html
0.5.0/search/: search_index.json
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/AUTHORS/: index.html
develop/CODE_OF_CONDUCT/: index.html
develop/LICENSE/: index.html
develop/architecture/: component-interaction.mmd
develop/change-log/: index.html
develop/contributing/: index.html
develop/installation/: index.html
develop/llm-sdk-api-comparison/: index.html
develop/overview/tools/: index.html
develop/search/: search_index.json
develop/tools/: index.html
develop/uv-usage/: index.html
docs/: change-log.md  index.md  installation.md  uv-usage.md
docs/developer-guide/: installation.md  taskfile.md  testing-docs.md
docs/overview/: codebase-map.md  core-package.md  providers.md  tools.md  uml-classes.mmd
examples/: app.py  chunks-size-overlap.py  encoder.py  run-model-with-rag.py  run-model.py
examples/notebooks/: sentence-transofrmers.ipynb
libs/core/: README.md  change-log.md  conftest.py  pyproject.toml
libs/providers/openai/: README.md  change-log.md  conftest.py  pyproject.toml
libs/providers/openai/src/serapeum/llms/openai/: base.py  responses.py  utils.py
libs/providers/openai/src/serapeum/openai/: __init__.py  base.py  client.py  converters.py  llm.py  model.py  models.py  models.yaml  responses.py  retry.py  utils.py
libs/providers/openai/src/serapeum/openai/data/: __init__.py  models.py
libs/providers/openai/src/serapeum/openai/llm/: __init__.py  chat_completions.py  responses.py
libs/providers/openai/src/serapeum/openai/llm/base/: __init__.py  client.py  model.py  structured.py
libs/providers/openai/src/serapeum/openai/mixins/: __init__.py  client.py  model.py  structured.py
libs/providers/openai/src/serapeum/openai/parsers/: __init__.py  chat_parsers.py  formatters.py  response_parsers.py
libs/providers/openai/tests/: test_converters.py  test_from_openai_converters.py  test_llms_openai.py  test_openai.py  test_openai_chat_completions.py  test_openai_e2e.py  test_openai_responses.py  test_openai_utils.py  test_responses_converters.py  test_retry.py
libs/providers/openai/tests/completions/: test_llms_openai.py  test_openai.py  test_openai_chat_completions.py  test_openai_e2e.py
libs/providers/openai/tests/parsers/: test_chat_parsers.py  test_formatters.py  test_response_parsers.py
libs/providers/openai/tests/responses/: test_openai_responses.py  test_openai_responses_e2e.py
llm/: __init__.py  chat_model.py  database.py  datasource.py  encoder.py
main/: 404.html  index.html  objects.inv  sitemap.xml
main/AUTHORS/: index.html
main/LICENSE/: index.html
main/change-log/: index.html
main/llm-sdk-api-comparison/: index.html
main/search/: search_index.json
serapeum/: __init__.py  chat_model.py  datastore.py
serapeum-core/: README.md  pyproject.toml
serapeum-core/tests/: __init__.py  models.py
serapeum-integrations/embeddings/serapeum-embeddings-ollama/: README.md  pyproject.toml
serapeum-integrations/embeddings/serapeum-embeddings-ollama/src/serapeum/embeddings/ollama/: __init__.py  base.py
serapeum-integrations/embeddings/serapeum-embeddings-ollama/tests/: test_embeddings_ollama.py
serapeum-integrations/llms/serapeum-llms-azure-openai/: pyproject.toml
serapeum-integrations/llms/serapeum-llms-azure-openai/tests/: test_llms_azure_openai.py
serapeum-integrations/serapeum-ollama/: pyproject.toml
serapeum/chat-templates/: google!gemma-2b-it.jinja  meta-llama!Meta-Llama-3-8B-Instruct.jinja
src/serapeum/: __init__.py
src/serapeum-core/: README.md
tests/: conftest.py  run-model.py  test_chat_model.py  test_datasource.py  test_import.py  test_llms_ollama.py
tests/core/: models.py
tests/mo/: chunks-size-overlap.py
(+736 files in other folders)
