[project]
name = "serapeum"
version = "0.1.0"
description = "llm utility package"
readme = "README.md"
license = {text = "GNU General Public License v3"}
authors = [
    {name = "Mostafa Farrag", email = "moah.farag@gmail.com"}
]
keywords = ["llm", "generativeai", "chatbot", "rag", "natural language processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "ollama>=0.5.4",
    "numpy",
    "filetype>=1.2.0",
    "requests>=2.32.5",
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest-asyncio>=1.2.0",
    "nest-asyncio>=1.6.0",
    "nbval>=0.11.0",
]

docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook<7.0",
    "jupyter",
    "commitizen (>=4.8.3,<5.0.0)",
]

[project.urls]
homepage = "https://github.com/Serapieum-of-alex/serapeum"
repository = "https://github.com/Serapieum-of-alex/serapeum"
documentation = "https://serapeum.readthedocs.io/"
Changelog = "https://github.com/Serapieum-of-alex/serapeum/HISTORY.rst"


[tool.hatch.build.targets.wheel]
packages = ["src/serapeum"]

[tool.flake8]
ignore = ["E501", "W503", "E731", "E203", "D401", "D102"]
max-line-length = 120
count = true

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = "docs"
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
    "mock: marks tests as mock (deselect with '-m \"not mock\"')",
    "integration: marks tests as optional-package (deselect with '-m \"not optional_package\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
