[project]
name = "serapeum"
version = "0.1.0"
description = "llm utility package"
readme = "README.md"
license = {text = "GNU General Public License v3"}
authors = [
    {name = "Mostafa Farrag", email = "moah.farrag@gmail.com"}
]
keywords = ["llm", "generativeai", "chatbot", "rag", "natural language processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">=3.11,<4.0"
dependencies = [
    "serapeum-core",
    "serapeum-llms-ollama",
    "serapeum-embeddings-ollama"
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest-asyncio>=1.2.0",
    "nest-asyncio>=1.6.0",
    "nbval>=0.11.0",
    "mypy>=1.13.0",
]

docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook<7.0",
    "jupyter",
    "commitizen (>=4.8.3,<5.0.0)",
]

[project.urls]
homepage = "https://github.com/Serapieum-of-alex/serapeum"
repository = "https://github.com/Serapieum-of-alex/serapeum"
documentation = "https://serapeum.readthedocs.io/"
Changelog = "https://github.com/Serapieum-of-alex/serapeum/HISTORY.rst"


[tool.hatch.build.targets.wheel]
packages = ["src/serapeum"]

[tool.flake8]
ignore = ["E501", "W503", "E731", "E203", "D401", "D102"]
max-line-length = 120
count = true
per-file-ignores = [
    "tests/*:D",
    "*/tests/*:D",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]

norecursedirs = ["docs"]
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
    "mock: marks tests as mock (deselect with '-m \"not mock\"')",
    "integration: marks tests as integration test (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit test (deselect with '-m \"not unit\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "serapeum.core.base.*"
strict = true

[[tool.mypy.overrides]]
module = "serapeum.core.llm.*"
strict = true

[[tool.mypy.overrides]]
module = "serapeum.core.tools.*"
strict = true

[[tool.mypy.overrides]]
module = "serapeum.core.structured_tools.*"
strict = true

[[tool.mypy.overrides]]
module = "serapeum.llms.ollama.*"
strict = true


[tool.uv.workspace]
members = [
    "serapeum-core",
    "serapeum-integrations/llms/serapeum-llms-ollama",
    "serapeum-integrations/embeddings/serapeum-embeddings-ollama",
]

[tool.uv.sources]
serapeum-core = { workspace = true }
serapeum-llms-ollama = { workspace = true }
serapeum-embeddings-ollama = {workspace = true}

#[tool.uv]
#managed = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
