[project]
name = "serapeum-llms-azure-openai"
version = "0.1.0"
description = "serapeum llms azure openai integration"
authors = [{name = "Mostafa Farrag", email = "moah.farrag@gmail.com"}]
readme = "README.md"
license = {text = "GNU General Public License v3"}


requires-python = ">=3.11,<4.0"
dependencies = [
    "serapeum-llms-openai>=0.6.0,<0.7",
    "azure-identity>=1.15.0,<2",
    "httpx",
    "serapeum-core",
]


[dependency-groups]
dev = [
    "ipython>=8.10.0",
    "jupyter>=1.0.0,<2",
    "mypy>=0.991",
    "pre-commit>=3.2.0",
    "pylint>=2.15.10",
    "pytest>=7.2.1",
    "pytest-mock>=3.11.1",
    "ruff>=0.11.11",
    "types-Deprecated>=0.1.0",
    "types-PyYAML>=6.0.12.12,<7",
    "types-protobuf>=4.24.0.4,<5",
    "types-redis>=4.5.5.0",
    "types-requests>=2.28.11.8",
    "types-setuptools>=67.1.0.0",
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "diff-cover>=9.2.0",
    "pytest-cov>=6.1.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/serapeum/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["src/serapeum/"]
exclude = ["**/BUILD"]


[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.12"

[tool.uv.sources]
serapeum-core = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
